<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicstructure.MainActivity">

    <TextView
        android:onClick=""
        android:id="@+id/albums"
        style="@style/TextViewStyle"
        android:text="@string/albums"
        android:gravity="center"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/artists"
        style="@style/TextViewStyle"
        android:text="@string/artists"
        android:gravity="center"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albums"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@android:color/holo_orange_dark"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/songs"
        style="@style/TextViewStyle"
        android:text="@string/songs"
        android:gravity="center"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artists"
        app:layout_constraintRight_toRightOf="parent"
        android:background="#D32F2F"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/home_text"
        style="@style/TextViewStyle"
        android:text="@string/home"
        android:layout_margin="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
</android.support.constraint.ConstraintLayout>
